# synergetica

./: 404.html  LICENSE  README.md  index.html  output.txt  sitemap.xml
backend/: .dockerignore  .gitignore  README.md  compose.yml  mkdocs.yml  pyproject.toml
backend/datasets/cache/test/: data-00000-of-00001.arrow  state.json
backend/datasets/cache/train/: data-00000-of-00001.arrow  dataset_info.json  state.json
backend/datasets/cache/val/: data-00000-of-00001.arrow  state.json
backend/docker/: Dockerfile  push_to_hub.sh
backend/docs/: index.md  mkdocs.yml
backend/docs/docs/pages/getting_starts/: install.md
backend/docs/docs/pages/guide/: generation.md
backend/docs/getting-started/: tutorial.md
backend/docs/guides/: circuit-design.md  terminology.md
backend/generator/: README.md
backend/generator/api/: main.py  routers.py  schemas.py  utils.py
backend/generator/api/utils/: __init__.py  create_api_response.py  middleware.py  parse_flow.py
backend/generator/core/genetic_algorithm/: __init__.py  genetic_algorithm.py
backend/generator/core/genetic_algorithm/scripts/: generate.py
backend/generator/core/predictor/: predictor.py
backend/generator/core/predictor/configs/: default.yaml
backend/generator/core/predictor/datasets/: load.py  preprocess.py  tokenizer.py  utils.py
backend/generator/core/predictor/models/: transformer_regressor.py
backend/generator/core/predictor/modules/: datamodule.py  lightningmodule.py
backend/generator/core/predictor/scripts/: inference.py  test.py  train.py
backend/simulator/: README.md  euler.py  interpret_gui_circuit.py
backend/simulator/api/: main.py  routers.py  schemas.py  utils.py
backend/simulator/core/: schema.py
backend/simulator/modules/: build_protein_interaction.py  dynamic_formulation.py  euler.py  parse_gui_graph.py  toggle_output_new.json  toggle_output_test.json  utils.py
backend/src/api/schemas/: simulator.py
backend/src/api/utils/: __init__.py
backend/src/generator/genetic_algorithm/: generate.py
backend/src/generator/predictor/models/: __init__.py
backend/src/generator/predictor/modules/: __init__.py  datamodule.py
backend/src/generator/train/configs/: default.yaml  multi_gpu.yaml  single_gpu.yaml
backend/src/generator/train/scripts/: hf_hub.py  inference.py
backend/src/simulator/: build_protein_interaction.py  dynamic_formulation.py
backend/tests/: conftest.py
backend/tests/test_api/: test_main.py
backend/tests/test_api/test_routers/: test_generator.py
backend/tests/test_api/test_utils/: test_unify_logging.py
backend/tests/test_common/: test_unify_logging_fastapi.py
backend/tests/test_generator/test_api/: test_main.py  test_routers.py
backend/tests/test_generator/test_api/test_utils/: test_parse_flow.py
backend/tests/test_generator/test_core/test_genetic_algorithm/: test_genetic_algorithm.py
backend/tests/test_generator/test_predictor/test_datasets/: test_preprocess.py
backend/tests/test_generator/test_predictor/test_models/: test_positional_embeddings.py
backend/tests/test_generator/test_predictor/test_modules/: test_datamodule.py
backend/tests/test_simulator/: circuit_for_test.py  conftest.py  test_build_protein_interaction.py  test_dynamic_formulation.py  test_euler.py  test_parse_graph.py
backend/tests/test_simulator/test_api/: circuit_for_test.py  test_main.py  test_routers.py  test_simulator_api_utils.py
backend/tests/test_simulator/test_modules/: test_build_protein_interaction.py  test_dynamic_formulation.py  test_simulator_module_utils.py  test_utils.py
desktop/: README.md  package.json  (+2 more)
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: api.rs  lib.rs
docs/: README.md  mkdocs.yml  pyproject.toml
docs/docs/: index.md
docs/docs/pages/: home.md
docs/docs/pages/getting_starts/: tutorial.md
docs/docs/pages/guide/: generation.md  simulation.md
docs/docs/pages/guide/gui/: design.md  dsl.md  parts.md
frontend/src-tauri/: .gitignore  Cargo.toml  compose.yml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json  migrated.json
frontend/src-tauri/src/: api.rs  clients.rs  lib.rs  main.rs  schemas.rs
services/: .dockerignore  .gitignore  Dockerfile  README.md  mkdocs.yml  pyproject.toml
services/docs/: index.md
services/docs/getting-started/: installation.md  tutorial.md
services/docs/guides/: circuit-design.md  customize-parts.md  genetic-simulation.md  parts-customization.md  sequence-generation.md  terminology.md
services/docs/stylesheets/: extra.css
services/src/api/: main.py
services/src/api/generator/: constants.py  router.py  schemas.py  service.py
services/src/api/generator/predictor/: __init__.py
services/src/api/routers/: generator.py  simulator.py
services/src/api/schemas/: generator.py
services/src/api/simulator/: constants.py  router.py  schemas.py  service.py  utils.py
services/src/generator/genetic_algorithm/: genetic_algorithm.py
services/src/generator/predictor/: predictor.py
services/src/generator/predictor/datasets/: preprocess.py  tokenizer.py
services/src/generator/predictor/models/: transformer_regressor.py
services/src/simulator/: euler.py  utils.py
services/src/train/configs/: default.yaml
services/src/train/datasets/: dummy_data.csv
services/src/train/scripts/: inference.py  test.py  train.py
services/tests/: conftest.py
services/tests/test_api/test_generator/: test_router.py  test_service.py
services/tests/test_api/test_routers/: test_simulator.py
services/tests/test_api/test_simulator/: conftest.py  test_router.py  test_service.py  test_utils.py
services/tests/test_generator/test_genetic_algorithm/: test_genetic_algorithm.py
services/tests/test_generator/test_predictor/test_datasets/: test_tokenizer.py
services/tests/test_generator/test_predictor/test_models/: test_transformer_regressor.py
services/tests/test_simulator/: test_dynamic_formulation.py  test_euler.py  test_utils.py
services/tests/test_train/test_scripts/: test_train.py
(+640 files in other folders)
